# 101digital-service-weather

./: .dockerignore  .env  .gitignore  .importlinter  .pre-commit-config.yaml  Dockerfile  README.md  cicd.Dockerfile  docker-compose.ci.yaml  docker-compose.yaml  pyproject.toml  service-weather.postman_collection.json
.github/workflows/: ci.yaml  deploy-dev.yaml  deploy-prod.yaml  deploy.yaml
iac/: terragrunt.hcl
iac/dev/: cloudformation.yaml  terragrunt.hcl
iac/helms/: api-values.yaml.tftpl  ingress-nginx.yaml.tftpl
iac/helms/api/templates/: deployment.yaml  service.yaml
iac/modules/api/: acm.tf  cognito.tf  ecr.tf  eks.tf  helm.tf  inputs.tf  locals.tf  network.tf
iac/prod/: terragrunt.hcl
iac/scripts/: decrypt_secret.sh  encrypt_secret.sh  init_terraform_backend.sh  install_terragrunt.sh
iac/secrets/: .sops.yaml  secrets.dev.encrypted.yaml  secrets.encrypted.yaml  secrets.prod.encrypted.yaml  secrets.sample.yaml
iac/tfvars/: common.tfvars  dev.tfvars  prod.tfvars
src/: app.py
src/api/schema/: open_weather_rest.py
src/api/v1/: __init__.py
src/api/v1/routers/: weather.py
src/settings/: config.py
